--- a/index.html
+++ b/index.html
@@ -15,19 +15,17 @@
     <meta property="og:title" content="Tic Tac Toe Game by Yash Tiwari">
     <meta property="og:description"
         content="Simple, responsive Tic Tac Toe game built with JavaScript. Track score, switch turns, and reset the game.">
-    <meta property="og:image" content="https://yourdomain.com/preview.png"> 
-    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:image" content="https://yashrtech.github.io/Tic-Tac-Toe/preview.png"> 
+    <meta property="og:url" content="https://yashrtech.github.io/Tic-Tac-Toe/">
     <meta property="og:type" content="website">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.svg" type="image/x-icon">
 
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
-<body bgcolor="black" text="white">
+<body>
 
     <div class="heading">
         <h1>Tic-Tac-Toe</h1>
